--- a/src/Converter.properties
+++ b/src/Converter.properties
@@ -17,8 +17,8 @@ logType=Console
 # For example, by setting to Info, all debug related logs will not be outputted.
 minimumLogLevel=Debug
 
-# The default output settings below match the default output settings used by
-# Microsoft Deep Zoom Composer.
+# For compatibility reasons, the  default output settings below match the
+# default output settings used by Microsoft Deep Zoom Composer.
 
 # Tile size length in pixel(s) that is used for the tile height and width.
 # Default is 256.
