--- a/src/Converter.properties
+++ b/src/Converter.properties
@@ -5,6 +5,11 @@
 # net: .NET
 buildTarget=java
 
+# The type of Deep Zoom images to output.
+# single - outputs as single Deep Zoom image.
+# collection - outputs as multiple Deep Zoom image collection.
+outputType=single
+
 # Log type options:
 # Console - LoggerInterface outputs messages to the standard output.
 # File - LoggerInterface outputs messages to a file.
@@ -15,7 +20,7 @@ logType=Console
 # Priority is in the form
 # Fatal > Error > Info > Debug
 # For example, by setting to Info, all debug related logs will not be outputted.
-minimumLogLevel=Debug
+minimumLogLevel=Info
 
 # For compatibility reasons, the  default output settings below match the
 # default output settings used by Microsoft Deep Zoom Composer.
